k8s/frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz-frontend
  namespace: quiz
spec:
  selector:
    matchLabels:
      app: quiz-frontend
  template:
    metadata:
      labels:
        app: quiz-frontend
    spec:
      serviceAccountName: quiz
      containers:
        - name: nginx
          image: bindasp/quiz-frontend:17577432606
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "1000m"
              memory: "1024Mi"
      volumes:
        - name: nginx-conf
          configMap:
            name: quiz-frontend-nginx
