k8s/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quiz-frontend
  namespace: quiz
spec:
  selector:
    app: quiz-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: LoadBalancer
